--- a/rover/partials/reports/shared/rvReportDetailsFooter.html
+++ b/rover/partials/reports/shared/rvReportDetailsFooter.html
@@ -263,6 +263,11 @@
 			Min. Days Not Occupied: <span>{{ appliedFilter.hasMinNoOfDaysNotOccupied}}</span>
 		</div>
 
+		<!-- Group -->
+		<div ng-if="appliedFilter.group">
+			Company: <span>{{ appliedFilter.group }}</span>
+		</div>
+
 
 		<!-- Never REMOVE this span -->
 		<span> &nbsp; </span>
