--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -1808,13 +1808,10 @@ end of help-tip
 .addon-lang-dropdown {
   position: absolute;
   right: 0;
-  top: -12px;
+  top: -21px;
   right: 0;
   width: 19%;
-  >select{
-    background: #f5f5f5 !important;
-  }
-  
+  border: 1px #f5f5f5 solid;
 }
 .addon-status{
   right: 20% !important;
