CICO-38990: show balance in report

--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -163,8 +163,14 @@ is_ledger
   </td>
 </tr>
 <tr class="grouped" ng-show="ledgerDepositEntries.length > 0">
-  <td class="code long-code" colspan="8"></td>
-    <td class="break">LEDGER DATA</td>
+  <td class="code long-code"></td>
+  <td class="break">LEDGER DATA</td>
+  <td></td>
+  <td></td>
+  <td class="break"></td>
+  <td></td>
+  <td></td>
+  <td></td>
 </tr>
 
 <tr ng-repeat="item in balanceEntries track by $index" class="charge-group" >
