--- a/admin/partials/lightspeedPOS/adLightspeedPOSSetup.html
+++ b/admin/partials/lightspeedPOS/adLightspeedPOSSetup.html
@@ -16,7 +16,7 @@
     <section class="content-scroll">
         <div ng-include="'/assets/partials/common/notification_message.html'"></div>
         <div ng-include="'/assets/partials/common/notification_success_message.html'"></div>
-        <div class="form float" ng-if="state.activeTab === 'SETUP'" >
+        <div class="form float" ng-if="state.activeTab === 'SETUP'">
             <fieldset class="holder full-width">
                 <div class="entry full-width">
                     <label><span translate>LIGHT_SPEED_POS_ACTIVATE_INACTIVATE</span></label>
@@ -67,6 +67,12 @@
                     <ad-textbox inputtype="text" value="lightspeed.counterpart_payment_code"
                                 label="{{'LIGHT_SPEED_COUNTERPART_PAYMENT_CODE'| translate}}" styleclass="full-width"
                                 ng-if="lightspeed.enabled"></ad-textbox>
+                </fieldset>
+                <fieldset class="holder left">
+                    <ad-charge-code-auto-complete exclude-payments="true" required="true" ng-model="lightspeed.tips_charge_code_name"
+                                                  selected-charge-code-id="lightspeed.tips_charge_code_id"
+                                                  ng-if="lightspeed.enabled" label="Charge code for Tips"
+                                                  entry-div-class="full-width"></ad-charge-code-auto-complete>
                 </fieldset>
             </fieldset>
 
