--- a/guestweb/css/less/huntley.less
+++ b/guestweb/css/less/huntley.less
@@ -321,4 +321,11 @@ border-bottom:1px solid;
 	}
 }
 
-	
+/* Checkin CC Adding Styles*/
+.col-center-block {
+    float: none;
+    display: block;
+    margin: 0 auto;
+    /* margin-left: auto; margin-right: auto; */
+}
+/* Checkin CC Adding Styles*/
