--- a/admin/partials/rates/adNewAddon.html
+++ b/admin/partials/rates/adNewAddon.html
@@ -3,27 +3,33 @@
         <form id="add-addon" name="add-addon" class="form inline-form float">
             <div class="form-title">
                 <h3>
-					<span>{{ addonTitle }}</span>
-					{{ addonSubtitle }}
-				</h3>
+                    <span>{{ addonTitle }}</span>
+                    {{ addonSubtitle }}
+                </h3>
                 <em class="status" ng-class='{"addon-status":isConnectedToPMS}'>
-					{{'MANDATORY_FIELDS_MESSAGE1'| translate}}
-					<strong>*</strong>
-					{{'MANDATORY_FIELDS_MESSAGE2'| translate}}
-				</em>
+                    {{'MANDATORY_FIELDS_MESSAGE1'| translate}}
+                    <strong>*</strong>
+                    {{'MANDATORY_FIELDS_MESSAGE2'| translate}}
+                </em>
                 <div class="select select-col addon-lang-dropdown" ng-show='isConnectedToPMS'>
-                     <select ng-model="filter.locale" name="locale" ng-change="onLocaleChange()">
-                        <option ng-repeat="locale in languages.locales" value="{{locale.value}}" ng-selected="locale.value==filter.locale"> {{locale.language}} </option>
+                     <select ng-model="languageFilter.locale" name="locale" ng-change="onLocaleChange()">
+                        <option ng-repeat="locale in languages.locales" value="{{locale.value}}" ng-selected="locale.value==languageFilter.locale"> {{locale.language}} </option>
                     </select>
                 </div>
             </div>
 
             <fieldset class="holder left float">
-                <ad-textbox styleclass="full-width" value="singleAddon.name" name="name" id="name" label="{{'NAME' | translate}}" placeholder="{{'ENTER_ADDON_NAME' | translate}}" required="yes"></ad-textbox>
+                <ad-textbox styleclass="full-width" value="singleAddon.name" name="name" id="name" label="{{'NAME' | translate}}" placeholder="{{'ENTER_ADDON_NAME' | translate}}" required="yes"  ng-show="isDefaulLanguageSelected()"></ad-textbox>
+
+                <ad-textbox styleclass="full-width" value="translations.translated_name" name="name" id="name" label="{{'NAME' | translate}}" placeholder="{{'ENTER_ADDON_NAME' | translate}}" required="yes" ng-hide="isDefaulLanguageSelected()"></ad-textbox>
 
                 <ad-textbox ng-show="isConnectedToPMS" styleclass="full-width" value="singleAddon.package_code" name="name" disabled="true" id="name" label="{{'CODE' | translate}}" ></ad-textbox>
 
                 <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="singleAddon.description" name="desc" id="desc" label="{{'DESCRIPTION' | translate}}" placeholder="{{'ENTER_ADDON_DESCRIPTION' | translate}}" required="yes"></ad-textarea>
+
+               <!--  <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="translations.translated_description" name="desc" id="desc" label="{{'DESCRIPTION' | translate}}" placeholder="{{'ENTER_ADDON_DESCRIPTION' | translate}}" required="yes" ng-show="!isDefaulLanguageSelected()"></ad-textarea> -->
+
+                
 
                 <div ng-hide="isConnectedToPMS" class="entry full-width radio-check">
                     <label class="checkbox">
@@ -76,7 +82,9 @@
 
                     <ad-toggle-button div-class="full-width" label="{{'PRICE_SUFFIX_SWITCH_LABEL' | translate}}" is-checked="singleAddon.is_display_suffix"></ad-toggle-button>
 
-                    <ad-textbox ng-show="singleAddon.is_display_suffix"  styleclass="full-width" value="singleAddon.suffix_label" name="name" id="name" label="{{'PRICE_SUFFIX_LABEL' | translate}}" placeholder="{{'PRICE_SUFFIX_PLACEHOLDER' | translate}}"></ad-textbox>
+                    <ad-textbox ng-show="singleAddon.is_display_suffix && isDefaulLanguageSelected()"  styleclass="full-width" value="singleAddon.suffix_label" name="name" id="name" label="{{'PRICE_SUFFIX_LABEL' | translate}}" placeholder="{{'PRICE_SUFFIX_PLACEHOLDER' | translate}}"></ad-textbox>
+
+                    <ad-textbox ng-show="singleAddon.is_display_suffix && !isDefaulLanguageSelected()"  styleclass="full-width" value="translations.translated_suffix" name="name" id="name" label="{{'PRICE_SUFFIX_LABEL' | translate}}" placeholder="{{'PRICE_SUFFIX_PLACEHOLDER' | translate}}"></ad-textbox>
 
                 </div>
 
@@ -133,8 +141,10 @@
                 </div>
 
                 <ad-toggle-button div-class="full-width" label="{{'ALTERNATE_DESCRIPTION_SWITCH_LABEL' | translate}}" is-hide="!isConnectedToPMS" is-checked="singleAddon.is_alternate_description_active"></ad-toggle-button>
+                
+                <ad-textarea rows="4" hide="!(isConnectedToPMS && singleAddon.is_alternate_description_active) || (!isDefaulLanguageSelected())" div-class="full-width" text-area-class="full-width" value="singleAddon.alternate_description" name="desc" id="desc" label="{{'ALTERNATE_DESCRIPTION' | translate}}" placeholder="{{'ENTER_ADDON_ALTERNATE_DESCRIPTION' | translate}}" required="yes"></ad-textarea>
 
-                <ad-textarea rows="4" hide="!(isConnectedToPMS && singleAddon.is_alternate_description_active)" div-class="full-width" text-area-class="full-width" value="singleAddon.alternate_description" name="desc" id="desc" label="{{'ALTERNATE_DESCRIPTION' | translate}}" placeholder="{{'ENTER_ADDON_ALTERNATE_DESCRIPTION' | translate}}" required="yes"></ad-textarea>
+                <ad-textarea rows="4" hide="!(isConnectedToPMS && singleAddon.is_alternate_description_active) || isDefaulLanguageSelected()" div-class="full-width" text-area-class="full-width" value="translations.translated_alternate_description" name="desc" id="desc" label="{{'ALTERNATE_DESCRIPTION' | translate}}" placeholder="{{'ENTER_ADDON_ALTERNATE_DESCRIPTION' | translate}}" required="yes"></ad-textarea>
 
                 <div class="entry">
                     <div class="entry full-width">
