--- a/guestweb/common_templates/partials/checkin/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/checkin/gwCheckinDetails.html
@@ -67,6 +67,20 @@
                     </div>
                 </div>
             </div>
+             <div class="row margin-top-10 mob-margin-top-3" ng-show="isAddonUpsellActive && enhancements.length > 0 ">
+                <div class="col-xs-12 left-align">
+                    <div class="res-details-heading">
+                        ENHANCEMENTS
+                    </div>
+                    <div class="res-date">
+                        <ul>
+                        <li ng-repeat="addon in enhancements" class="left-align">{{addon.title}}</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <br>
+
             <div class="row applycharge margin-top-10 mob-margin-top-3">
                 <div class="col-xs-12 left-align">
                     <input type="checkbox" ng-click="termsClicked()" ng-model="checked"  class="accept-checkbox" ng-checked="checkedApplyCharges">
