CICO-38430 api integration

--- a/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
@@ -50,7 +50,7 @@
                 </div>
                 <!-- submit -->
                 <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-hide="hideAddAddonButton()">{{addonPurchase}}</a>
-                <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-show="hideAddAddonButton()">{{addonRemove}}</a>
+                <a class="btn btn-template margin-top-20" ng-click="removeAddon()" ng-show="hideAddAddonButton()">{{addonRemove}}</a>
                 <div class="row no-thanks-wrap margin-top-20">
                     <p class="centeralign no-thanks">
                         <a ng-click="noThanksClicked()" class="sub-text no-text-case">{{addonSkip}}</a>
