--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -262,7 +262,7 @@ is_ledger
 
 <tr class="grouped" ng-repeat="item in ledgerTotalVariance track by $index"  ng-show="ledgerTotalVariance.length > 0">
   <td class="code long-code break"><strong>{{item.section}}</strong></td>
-  <td class="break" ng-class="{ 'red': item.today < 0 }"> <strong> {{item.today | currency:currencySymbol:2}} </strong></td>
+  <td class="break" > <strong ng-class="{ 'red': item.today < 0 }"> {{item.today | currency:currencySymbol:2}} </strong></td>
   <td></td>
   <td></td>
   <td class="break"></td>
