--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -2898,6 +2898,11 @@
                         &:first-child {
                             th {
                                 font-weight: 600;
+                                .nowrap();
+
+                                &[colspan="1"] {
+                                    text-overflow: initial;
+                                }
                             }
                         }
 
