CICO-34733 Test commit for checking the html compile isssue

--- a/rover/partials/reports/groupRoomsReport/rvGroupRoomsReportSummarySection.html
+++ b/rover/partials/reports/groupRoomsReport/rvGroupRoomsReportSummarySection.html
@@ -1,4 +1,4 @@
-<div class="group-data totals">
+<div class="group-data totals test">
             <ul>
                 <li class="main-heading">
                   Total RMS
