CICO-34733 - Fix for data display issue in subsection

--- a/rover/partials/reports/groupRoomsReport/rvGroupRoomsReportSummarySection.html
+++ b/rover/partials/reports/groupRoomsReport/rvGroupRoomsReportSummarySection.html
@@ -1,4 +1,4 @@
-<div class="group-data totals test">
+<div class="group-data totals">
             <ul>
                 <li class="main-heading">
                   Total RMS
