CICO-38430 API integration

--- a/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
@@ -34,7 +34,7 @@
             <img ng-src="{{selectedAddon.image}}" class="content-image  margin-top-20" alt="">
             <p class="main-text no-text-case bold-text margin-top-20" ng-bind="addonPurchaseMsgForDisplay" ng-hide="showPurchaseStatus"></p>
             <div ng-hide="showPurchaseStatus" class="addon-details">
-                <p class="sub-main-text margin-top-20 no-text-case price-details">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}&nbsp;{{selectedAddon.suffix}}</p>
+                <p class="sub-main-text margin-top-20 no-text-case price-details">{{currencySymbol}}{{selectedAddon.amount}} {{selectedAddon.price_label}}&nbsp;{{selectedAddon.suffix}}</p>
                 <p class="sub-main-text margin-top-20" ng-bind-html="selectedAddonDescrition"></p>
                 <br/>
                 <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
@@ -72,8 +72,8 @@
                     <img ng-src="{{addon.image}}" alt="" width="100%" height="auto">
                 </div>
                 <div class="content-desc">
-                    <p class="sub-main-text no-text-case margin-top-10">{{addon.title | limitTo: 50 }}{{addon.title.length > 50? '...' : ''}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
-                    <p class="sub-main-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}&nbsp;{{addon.suffix}}</p>
+                    <p class="sub-main-text no-text-case margin-top-10">{{addon.name | limitTo: 50 }}{{addon.name.length > 50? '...' : ''}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
+                    <p class="sub-main-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.amount}} {{addon.price_label}}&nbsp;{{addon.suffix}}</p>
                 </div>
             </div>
             <a class="btn btn-template margin-top-20" ng-click="noThanksClicked()">{{addonContinue}}</a>
