--- a/guestweb/common_templates/partials/checkin/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/checkin/gwCheckinDetails.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="res-date">
                         <ul>
-                        <li ng-repeat="addon in enhancements" class="left-align">{{addon.title}}</li>
+                        <li ng-repeat="addon in reservationData.addons_data" class="left-align">{{addon.name}}</li>
                         </ul>
                     </div>
                 </div>
