CICO-38430 api integration

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -529,6 +529,7 @@
       img{
         max-height:100%;
         border:1px #A9A9A9 solid;
+        background:#fff;
       }
       min-height:98px;
     }
