--- a/guestweb/common_templates/partials/checkin/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/checkin/gwCheckinDetails.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-             <div class="row margin-top-10 mob-margin-top-3" ng-show="isAddonUpsellActive && enhancements.length > 0 ">
+             <div class="row margin-top-10 mob-margin-top-3" ng-show="isAddonUpsellActive && reservationData.addons_data.length > 0 ">
                 <div class="col-xs-12 left-align">
                     <div class="res-details-heading">
                         ENHANCEMENTS
