--- a/rover/partials/reports/groupRoomsReport/rvGroupRoomsReport.html
+++ b/rover/partials/reports/groupRoomsReport/rvGroupRoomsReport.html
@@ -56,17 +56,17 @@
                             <tr>
                                 <!-- Add .empty if its empty (The group was not there on that day)
                                          Add .zero if its zero -->
-                                <td ng-repeat="blockedCount in group.blockedCounts track by $index" ng-class="{'zero': blockedCount == 0, 'empty': !blockedCount}">{{blockedCount}}</td>
+                                <td ng-repeat="blockedCount in group.blockedCounts track by $index" ng-class="{'zero': blockedCount == 0, 'empty': isEmpty(blockedCount)}">{{blockedCount}}</td>
                             </tr>
                             <tr>
                                 <!-- Add .empty if its empty (The group was not there on that day)
                                          Add .zero if its zero -->
-                                <td ng-repeat="pickedUpCount in group.pickedUpCounts track by $index" ng-class="{'zero': pickedUpCount == 0, 'empty': !pickedUpCount}">{{pickedUpCount}}</td>
+                                <td ng-repeat="pickedUpCount in group.pickedUpCounts track by $index" ng-class="{'zero': pickedUpCount == 0, 'empty': isEmpty(pickedUpCount)}">{{pickedUpCount}}</td>
                             </tr>
                             <tr>
                                 <!-- Add .empty if its empty (The group was not there on that day)
                                          Add .zero if its zero -->
-                                <td ng-repeat="availableCount in group.availableCounts track by $index" ng-class="{'zero': availableCount == 0, 'empty': !availableCount}">{{availableCount}}</td>
+                                <td ng-repeat="availableCount in group.availableCounts track by $index" ng-class="{'zero': availableCount == 0, 'empty': isEmpty(availableCount)}">{{availableCount}}</td>
                             </tr>
                         </tbody>
                     </table>
