--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -3468,7 +3468,7 @@
                 padding:5px 10px;
                 border-top: 1px solid @grey2;
                 border-bottom: 1px solid @grey2;
-                height: 40px;
+                min-height: 40px;
                 .float;
 
                 .title {
@@ -3487,6 +3487,8 @@
                     li {
                         float: left;
                         margin-bottom:0;
+                        line-height:1;
+                        margin-top: 2px;
 
                         &:not(:last-child) {
                             margin-right: 20px;
